Fix 1. FE bug on vocab sheets, in which remove vocab button padding was incorrect. 2. FE bug in which vocab sheets were not showing on Flashcards page, 3. Added authentication back in vocab add/delete. Note that authentication does not check the owner of a sheet

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,3 +20,13 @@ code {
 .article-excerpt-text {
   margin: 10px;
 }
+
+.vocabRow .manualPadding {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.vocabRow .manualPadding button {
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
